finished homepage. Added nav bar and linked nav bar to about page. Aligned nav bar and fixed width on nav bar.

--- a/css/index.css
+++ b/css/index.css
@@ -70,6 +70,20 @@ p {
     width: 800px;
     margin: 0 auto;
 }
+.nav-flex{
+   display:flex; 
+   justify-content: space-between; 
+   align-items: flex-end;
+   width: 95%; 
+}
+a{
+    text-decoration: none; 
+    color: black; 
+}
+.header-image{
+    margin-top: 2rem; 
+    margin-bottom: 2rem; 
+}
 
 .top-content {
     display: flex;
@@ -126,6 +140,36 @@ p {
     padding-right: 0;
 }
 
+#box1{
+    background:teal;
+}
+#box2{
+    background: gold; 
+}
+#box3{
+    background: cadetblue;
+}
+#box4 { 
+    background: coral;
+}
+#box5{
+    background: crimson;
+    } 
+#box6{
+    background:forestgreen
+}
+#box7{
+    background:darkorchid;
+}
+#box8{
+    background:hotpink;
+}
+#box9{
+    background:indigo;
+}
+#box10{
+    background:dodgerblue;
+}
 footer {
     width: 100%;
     background: black;
